--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "description": "",
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/uuid": "^10.0.0",
     "nodemon": "^3.1.9",
     "tslint": "^5.20.1",
     "typescript": "^5.7.3"
@@ -23,6 +24,7 @@
     "concurrently": "^9.1.2",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "uuid": "^11.1.0"
   }
 }
